re PR rtl-optimization/19464 (gcse causes poor register allocation)

PR rtl-optimization/19464
	* tree-optimize.c (init_tree_optimization_passes): Add one more
	copyrename pass just before out-of-ssa.

From-SVN: r94124